ingress-central.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lgtm-external-gateway
  namespace: observability
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.example.com"
      tls:
        mode: Terminate
        certificateRefs:
        - name: lgtm-wildcard-tls
          kind: Secret

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: observability
spec:
  parentRefs:
    - name: lgtm-external-gateway
      namespace: observability
  hostnames:
  - "grafana.example.com"
  rules:
  - backendRefs:
    - name: monitor-grafana
      kind: Service
      port: 80
